# lab-instruments

./: README.md  demo_types.py  hello.py  pyproject.toml  test_package.py
core/: __init__.py  common_scpi.py  factory.py  serial.py
core/interfaces/: __init__.py  connection.py  serial.py  serial_interface.py  socket.py  socket_interface.py
core/scpi/: common_scpi.py  lcr_scpi.py
docs/: APIReference.md  CommonSCPI.md  IM3590.md  PluginDevelopment.md  RequirementsAnalysis.md
examples/: README.md  advanced_usage.py  basic_usage.py  example1.py  simple_example.py
lab_instruments/: .stub_cache.json  __init__.py  __init__.pyi  factory.py  registry.py  stub_manager.py
lab_instruments/core/: __init__.py  connection_factory.py
lab_instruments/core/interfaces/: __init__.py  connection.py  serial_interface.py  socket_interface.py  visa_interface.py
lab_instruments/core/scpi/: __init__.py  common_scpi.py  lcr_scpi.py
lab_instruments/plugins/im3590/: config.json  im3590_scpi.py
lab_instruments/plugins/plz164w/: plz164w_scpi.py
plugins/im3590/: config.json  im3590_scpi.py  scpi.py  sequence.py
plugins/plz164w/: config.json  plz164w_scpi.py
plugins/scripts/: search_visa_address.py
scripts/: create_plugin.py  diagnostics.py  example_sequence.py  monitor.py  scpi_shell.py  test_enhanced_features.py
