[project]
name = "lab-instruments"
version = "0.1.0"
description = "SCPI device communication framework with automatic type inference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "lab_instruments/",
    "py.typed",
]

[tool.hatch.build.targets.wheel]
packages = ["lab_instruments"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0",
]
